<resources>
    <string name="app_name">beenAlone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">459588271823085</string>
    <string name="fb_login_protocol_scheme">fb459588271823085</string>


    <!--    default-->
    <string name="package_name">com.torrydo.beenalone</string>
    <string name="default_date">2/2/2020</string>
    <string name="song_source">Bendsound.com</string>
    <string name="lonely">Lonely</string>
    <string name="lvl_title">level</string>

    <!--    class-->
    <string name="human">Human</string>
    <string name="peasant">Peasant</string>
    <string name="trooper">Trooper</string>
    <string name="warrior">Warrior</string>
    <string name="adventurer">Adventurer</string>
    <string name="mage">Mage</string>
    <string name="noble">Noble</string>
    <string name="philosopher">Philosopher</string>
    <string name="king">King</string>
    <string name="peasant_content">nông dân chăm chỉ</string>
    <string name="trooper_content">lính canh may mắn</string>
    <string name="warrior_content">chiến binh dũng cảm</string>
    <string name="adventurer_content">mạo hiểm giả pro</string>
    <string name="mage_content">pháp sư vjp vleu</string>
    <string name="noble_content">quý tộc nhiều tiền</string>
    <string name="philosopher_content">triết gia thông thái</string>
    <string name="king_content">nhà vua, trên vạn người dưới 1 người</string>


    <!--    reuse layout-->
    <string name="button_ok">OK</string>
    <string name="edittext_hint">default : Seiya</string>

    <!--    custom calendar picker-->
    <string name="bottom_button_positive">OK</string>
    <string name="bottom_button_negative">Cancel</string>

    <!--    hello Fragment-->
    <string name="hello1_button_negative">No !</string>
    <string name="hello1_button_positive">Yes ^^</string>
    <string name="hello_button_2">Keep going</string>
    <string name="hello_button_3">OK</string>

    <string name="hello1_txt1">Hi there!</string>
    <string name="hello1_txt2">Im so lonely!</string>
    <string name="hello1_txt3">Can you be my friend ?</string>

    <string name="hello2_txt1">Yayy :3</string>
    <string name="hello2_txt2">We are friend now,</string>
    <string name="hello2_txt3">Could you tell me your name ?</string>
    <string name="hello2_txt4">And one more thing</string>
    <string name="hello2_txt5">You have been lonely since…</string>

    <string name="hello2_txt6">So…</string>
    <string name="hello2_txt7">I will stay here, whenever you feel lonely</string>
    <string name="hello2_txt8">because…</string>
    <string name="hello2_txt9">we are friend :3</string>
    <string name="hello2_txt10">dont forget me &#128150;</string>

    <string name="hello2_button_final">OK</string>

    <!--    mainFragment-->
    <string name="main1">Counter</string>
    <string name="main2">Library</string>
    <string name="main3">More</string>
    <!--    mainFragment1-->
    <string name="main1_rank_title">Class</string>
    <string name="main1_level">Loneliness\n-level-</string>
    <string name="main1_alonefor">Alone for :\u0020</string>
    <string name="main1_alonefrom">Since :\u0020</string>
    <string name="main1_exp">Exp :\u0020</string>
    <string name="main1_currency">Cat coin :\u0020</string>
    <string name="main1_rank">Class :\u0020</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="song_name">Song\'s Name : </string>
    <string name="source">Source : </string>

    <!--    main2Fragment-->
    <string name="game_title">Games</string>
    <string name="some_stuff_title">I dunno :v</string>

    <!--    main3Fragment-->
    <string name="google_signin">Sign In</string>
    <string name="fb_signin">Continue with Facebook</string>
    <string name="option_title_1">Click me</string>
    <string name="option_content_1">If you can ^^</string>
    <string name="option_title_2">Rate our App</string>
    <string name="option_content_2">hope you like our app &#60;3</string>
    <string name="option_title_3">Dark Mode</string>
    <string name="option_title_4">Suggestions &amp; Contact</string>
    <string name="option_content_4">let me know your Feeling ^^</string>

    <string name="option_title_5">Deleta data in the cloud</string>
    <string name="option_content_5">your data will be permanently deleted</string>
    <string name="option_title_6">Sign Out</string>
    <string name="option_title_7">About</string>
    <string name="option_title_8">Clear cache</string>
    <string name="option_title_9">Play music when starting</string>

    <string name="dev_email">torrydo.mobile@gmail.com</string>
    <string name="email_title_contact">Lonely Contact &#11088;</string>


    <!--    dashboard bottom sheet-->
    <string name="song_title">Songs</string>
    <!--    dialog txt creator-->
    <string name="editor_title">Your nickname</string>
    <string name="editor_content_hint">type your nickname here</string>
    <string name="editor_button_negative">Cancel</string>
    <string name="editor_button_positive">OK</string>
    <string name="editor_warning_shortName">your nickname must not be too short</string>

<!--    rank bottom sheet-->
    <string name="rank_title">Class</string>
    <string name="warning_not_reached_lvl_title">Locked</string>
    <string name="warning_not_reached_lvl_content">Unlock me if you can.</string>
    <string name="menu_text">Choose</string>


    <!--    game 2048-->
    <string name="game_2048">2048</string>
    <string name="action_settings">Settings</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="toggle_fullscreen">Long click to toggle fullscreen</string>
    <!--    game dap chuot-->
    <string name="game_beat_the_mouse">Beat the Mouse!</string>

    <!--    quote cat array-->
    <string name="quote_cat_1">I miss you\nMy friend</string>
    <string name="quote_cat_2">Im lonely\nbut now I have you</string>
    <string name="quote_cat_3">yay \nnew day has come \nand I have you</string>
    <string name="quote_cat_4">You are the apple of my eye ^^</string>
    <string name="quote_cat_5">UwU \n      meow moew :3</string>
    <string name="quote_cat_6">Dont leave me alone T_T</string>
</resources>