<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_background_darker"
    tools:context=".fragment.Hello_2">

    <include
        android:id="@+id/hello2_reuse_avatar"
        layout="@layout/reuse_cat_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginVertical="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/hello2_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hello2_txt1"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_reuse_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hello2_txt4"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_reuse_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hello2_txt6"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_reuse_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/hello2_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt2"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt5"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt7"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt3"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt8"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt9"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello2_txt10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello2_txt10"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintTop_toBottomOf="@id/hello2_txt9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hello2_button_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/default_date"
        android:textSize="@dimen/default_big_text_size"
        android:textColor="@color/black"
        android:background="@drawable/custom_date_picker_button"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"


        app:layout_constraintTop_toBottomOf="@id/hello2_txt5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <include
        android:id="@+id/hello2_reuse_searchbar"
        layout="@layout/reuse_searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hello2_txt3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hello2_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        android:paddingHorizontal="10dp"
        android:text="@string/hello_button_2"
        android:background="@drawable/custom_button_positive"
        android:textColor="@color/white"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hello2_button_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="30dp"
        android:paddingHorizontal="10dp"
        android:text="@string/hello2_button_final"
        android:background="@drawable/custom_button_positive"
        android:textColor="@color/white"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>