<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_background_darker"
    tools:context=".fragment.Hello_1">

    <TextView
        android:id="@+id/hello1_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello1_txt1"
        android:textSize="@dimen/default_big_text_size"
        android:textColor="@color/text_color_default"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@id/hello1_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello1_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello1_txt2"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintBottom_toTopOf="@id/hello1_txt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello1_txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/hello1_txt3"
        android:textSize="@dimen/default_big_text_size"
        android:visibility="invisible"
        android:textColor="@color/text_color_default"

        app:layout_constraintBottom_toTopOf="@id/hello1_reuse_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/hello1_reuse_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/reuse_cat_avatar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hello1_button_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        android:background="@drawable/custom_button_positive"
        android:text="@string/hello1_button_positive"
        android:visibility="invisible"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hello1_button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        android:background="@drawable/custom_bottom_negative"
        android:text="@string/hello1_button_negative"
        android:textColor="@color/white"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>