<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/system_background2"
    >

    <TextView
        android:id="@+id/editor_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/editor_title"
        android:textSize="@dimen/default_big_text_size"
        android:textStyle="bold"
        android:textColor="@color/text_color_default"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editor_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edittext"

        android:textColorHint="@color/hint_text_color_default"
        android:hint="@string/editor_content_hint"
        android:padding="10dp"

        app:layout_constraintTop_toBottomOf="@id/editor_txt" />

    <TextView
        android:id="@+id/editor_negative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="15dp"

        android:background="@color/click_selector_default"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/editor_button_negative"
        android:textSize="@dimen/normal_text_size"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@color/text_color_default"

        app:layout_constraintEnd_toStartOf="@id/editor_positive"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editor_positive"
        app:layout_constraintBottom_toBottomOf="@id/editor_positive"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editor_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/main_color"
        app:cornerRadius="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/editor_button_positive"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintHorizontal_weight="3"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editor_edittext"
        app:layout_constraintStart_toEndOf="@id/editor_negative"
        />

</androidx.constraintlayout.widget.ConstraintLayout>