<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottomFragment.DashboardBottomFragment"
    android:backgroundTint="@color/system_background2"
    >

    <View
        android:id="@+id/dashTopView"
        android:layout_width="65dp"
        android:layout_height="6dp"

        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/gray"
        android:layout_marginTop="15dp"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dashCircleImage"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:src="@drawable/ic_music"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/dashTopView"
        app:layout_constraintStart_toStartOf="parent"
        >
    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/dashTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/song_name"
        android:gravity="center|start"
        android:layout_marginStart="15dp"

        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="@id/dashCircleImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dashCircleImage"
        app:layout_constraintBottom_toTopOf="@id/dashTxt2"
        />
    <TextView
        android:id="@+id/dashTxt2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/source"
        android:gravity="center|start"

        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/dashTitle"
        app:layout_constraintStart_toStartOf="@id/dashTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dashProgress"
        />

    <ProgressBar
        android:id="@+id/dashProgress"
        android:layout_width="0dp"
        android:layout_height="7dp"

        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        style="@style/roundProgress"

        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/dashTxt2"
        app:layout_constraintBottom_toBottomOf="@id/dashCircleImage"
        app:layout_constraintStart_toStartOf="@id/dashTxt2"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/dash_play"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"

        android:src="@drawable/ic_play"
        android:visibility="invisible"
        android:padding="2dp"

        app:layout_constraintTop_toTopOf="@id/dash_pause"
        app:layout_constraintStart_toStartOf="@id/dashProgress"

        />

    <ImageView
        android:id="@+id/dash_pause"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"

        android:src="@drawable/ic_pause"
        android:layout_marginTop="15dp"
        android:padding="2dp"

        app:layout_constraintTop_toBottomOf="@id/dashCircleImage"
        app:layout_constraintStart_toStartOf="@id/dashProgress"

        />

    <ImageView
        android:id="@+id/dash_stop"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"

        android:src="@drawable/ic_square_rounded"
        android:layout_marginHorizontal="30dp"
        android:padding="2dp"

        app:layout_constraintTop_toTopOf="@id/dash_pause"
        app:layout_constraintStart_toEndOf="@id/dash_pause"

        />

    <TextView
        android:id="@+id/dashSongstitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/song_title"
        android:gravity="start"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/main_color_darker"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dash_pause"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dash_recycler_songs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recyclerview_height"

        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/dashSongstitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>